--- a/aboutus.html
+++ b/aboutus.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <form action="">
+            <input type="text">
+            <input type="text">
+            <input type="text">
+            <button></button>
+        </form>
+    </div>
 </body>
 </html>
